@@ -1,8 +1,8 @@
-MD5 e29de3547bbe37ddf11d9d276baf9d45 ChangeLog 822
-MD5 075fea99b82d61028585dc3e42f00466 metadata.xml 156
-MD5 40e53266f5c2e6ef619c45b5fa91b48b synce-libsynce-0.3.ebuild 615
 MD5 86e8598e71d77ed7f3c2f09cc8c65460 synce-libsynce-0.7.ebuild 615
+MD5 2f2149e9e8ce7ab9f2e3e7b0c862ee2d synce-libsynce-0.8.9.ebuild 606
 MD5 a2dfc7e493b43066dc7f92a88904f55b synce-libsynce-0.8.1.ebuild 606
-MD5 625b9929ccf26c12f89d2a090ceeeb03 files/digest-synce-libsynce-0.3 70
-MD5 7d9811314c87ae1229c45598d0bb2c95 files/digest-synce-libsynce-0.7 70
+MD5 6ee44f4583f53152f806862b1feec58d ChangeLog 948
+MD5 075fea99b82d61028585dc3e42f00466 metadata.xml 156
 MD5 c178478ce18853e31d781c5808d7ee74 files/digest-synce-libsynce-0.8.1 72
+MD5 f7dab5c224f57f0f02ce747c58c0342d files/digest-synce-libsynce-0.8.9 72
+MD5 7d9811314c87ae1229c45598d0bb2c95 files/digest-synce-libsynce-0.7 70
