@@ -1,6 +1,11 @@
 # ChangeLog for app-pda/synce-libsynce
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-libsynce/Attic/ChangeLog,v 1.4 2003/09/02 19:40:09 liquidx Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-libsynce/Attic/ChangeLog,v 1.5 2004/03/26 12:34:10 tad Exp $
+
+*synce-libsynce-0.8.9 (26 Mar 2004)
+
+  26 Mar 2004; Troy Dack <troy@gentoo.org> synce-libsynce-0.8.9.ebuild:
+  Version bump.
 
 *synce-libsynce-0.8.1 (02 Sep 2003)
 
